# power-Simulation

./: CMakeLists.txt  README.md  a3700n_gui.cpp  a3700n_gui.h  a3700n_harm.cpp  a3700n_harm.h  a3700n_harm_style.qss  a3700n_phasor.cpp  a3700n_phasor.h  a3700n_style.qss  a3700n_wave.cpp  a3700n_wave.h  a3700n_wave_style.qss  dataManagement.cpp  dataManagement.h  dataStructures.h  dialedit.cpp  dialedit.h  frequencytracker.cpp  frequencytracker.h  graphsetting.cpp  graphsetting.h  graphwidget.cpp  graphwidget.h  harmonicwidget.cpp  harmonicwidget.h  inputmainwindow.cpp  inputmainwindow.h  inputsettingwidget.cpp  inputsettingwidget.h  inputwidget.cpp  inputwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  oneSecMinMax.h  onesecaccumulator.cpp  onesecaccumulator.h  oneseccalcdata.cpp  oneseccalcdata.h  (+19 more)
